# thinkonward_heat_signature_zero

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  ITERATION_LOG.md  ITERATION_LOG_full_backup.md  PROMPT.md  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml  final_submission.yaml
data/: heat-signature-zero-submission-sample.npz
docs/: DOCKER_CLAUDE.md  RESEARCH_NEXT_STEPS.md  future_optimizations.md
experiments/: __init__.py
notebooks/: 01_optimizer_demo.ipynb  02_jax_benchmark.ipynb  03_interactive_visualization.ipynb
orchestration/: EXPLORATION_STRATEGY.md  README.md  calibrate_timing.py  coordinator.py  docker-compose.auto.yml  docker-compose.manual.yml  docker-compose.workers.yml  orchestrator.py  run_orchestration.ps1  run_orchestration.sh  run_worker_loop.ps1  run_worker_loop.sh  status.py  worker_prompts.py  worker_prompts_v3.py  worker_prompts_v4.py  worker_prompts_v5.py  worker_runner.sh
outputs/: triangulation_20251228_133043_predictions.pkl  triangulation_v2_20251228_145238_predictions.pkl
results/: analytical_intensity_20260104_150756_results.pkl  analytical_intensity_20260104_152212_results.pkl  analytical_intensity_20260104_154517_results.pkl  analytical_intensity_20260110_030600_results.pkl  analytical_intensity_20260110_032253_results.pkl  analytical_intensity_20260110_152355_results.pkl  analytical_intensity_20260110_153537_results.pkl  analytical_intensity_20260110_154944_results.pkl  analytical_intensity_20260110_160242_results.pkl  asymmetric_12_24_20260105_194406_results.pkl  asymmetric_13_22_20260105_201053_results.pkl  asymmetric_15_22_20260105_203001_results.pkl  bo_12_22_20260108_051134_results.pkl  cmaes_20251229_112401_results.pkl  cmaes_20251229_115832_results.pkl  cmaes_20251229_122106_results.pkl  cmaes_20251229_123251_results.pkl  cmaes_20251229_124607_results.pkl  cmaes_20251229_130216_results.pkl  cmaes_20251229_131957_results.pkl  cmaes_20251229_135614_results.pkl  cmaes_20251229_141200_results.pkl  cmaes_20260109_164818_results.pkl  coarse_to_fine_12_30_20260105_222335_results.pkl  coarse_to_fine_12_30_20260105_223849_results.pkl  coarse_to_fine_12_35_20260105_221119_results.pkl  direct_solution_20251229_201957_results.pkl  direct_solution_20251229_203146_results.pkl  direct_solution_20251229_204524_results.pkl  direct_solution_20251229_213912_results.pkl  direct_solution_20251229_220522_results.pkl  direct_solution_20251229_225259_results.pkl  direct_solution_20251229_230717_results.pkl  direct_solution_20251230_123132_results.pkl  early_term_12_22_20260108_042306_results.pkl  early_term_12_22_20260108_043903_results.pkl  (+64 more)
scripts/: docker-run.sh  (+28 more)
(+891 files in other folders)
