[project]
name = "thinkonward-heat-signature-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipykernel",
    "plotly",
    "pandas",
    "nbformat",
    "joblib",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "ipywidgets>=8.1.8",
]
