[project]
name = "thinkonward-heat-signature-zero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipykernel",
    "plotly",
    "pandas",
    "nbformat",
    "joblib",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "jax-cuda12-pjrt==0.8.1",
    "jax-cuda12-plugin==0.8.1",
    "nvidia-cublas-cu12==12.9.1.4",
    "nvidia-cuda-cupti-cu12==12.9.79",
    "nvidia-cuda-nvcc-cu12==12.9.86",
    "nvidia-cuda-nvrtc-cu12==12.9.86",
    "nvidia-cuda-runtime-cu12==12.9.79",
    "nvidia-cudnn-cu12==9.17.1.4",
    "nvidia-cufft-cu12==11.4.1.4",
    "nvidia-cusolver-cu12==11.7.5.82",
    "nvidia-cusparse-cu12==12.5.10.65",
    "nvidia-nccl-cu12==2.28.9",
    "nvidia-nvjitlink-cu12==12.9.86",
    "nvidia-nvshmem-cu12==3.4.5",
    "ipywidgets>=8.1.8",
    "mlflow>=2.9.0",
    "pyyaml>=6.0",
]
